# ugaiv2

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs  requirements.txt  tailwind.config.ts  v0-user-next.config.mjs
app/: globals.css  layout.js  layout.tsx  main.py  page.tsx
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx  page.tsx
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/.github/workflows/: ci-cd.yml
backend/alembic/: env.py  script.py.mako
backend/api/: auth.ts
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  projects.py  tasks.py
backend/app/core/: config.py  logging.py  monitoring.py  security.py
backend/app/db/: base.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: df82b4f5e827_initial_migration_for_new_schema.py
backend/app/models/: base.py  user.py
backend/app/services/: directus.py  email.py  ldap.py
backend/tests/: confest.py
components/: notifications-dropdown.tsx  search-command.tsx  ugai-logo-svg.tsx  ugai-logo.tsx  wheat-icon.tsx
contexts/: client-context.tsx  user-context.tsx
directus/: roles.json
frontend/: dockerfile
hooks/: use-auth.ts  use-clients.ts  use-kpi.ts  use-mobile.ts  use-projects.ts  use-reports.ts  use-tasks.ts
lib/: api-client.ts  api.ts  auth-service.ts  auth.ts  cache.ts  client-directus-service.ts  db.ts  directus-service.ts  directus.ts  email.ts  logger.ts  mock-data.ts  utils.ts
types/: analytics.ts  index.ts
(+240 files in other folders)
